fix fiddly data table spacing

--- a/react/javascript/src/components/gherkin/DataTable.module.scss
+++ b/react/javascript/src/components/gherkin/DataTable.module.scss
@@ -4,7 +4,11 @@
   border-collapse: collapse;
   margin: 0;
 
-  tr {
+  thead tr {
+    border-bottom: 6px solid white;
+  }
+
+  tr + tr {
     border-top: 6px solid white;
   }
 
